@@ -1,3 +1,10 @@
+2007-06-04  David Bateman  <dbateman@free.fr>
+
+	* oct-inttypes.h (octave_int<T>& operator <<= (const T2&),
+	octave_int<T>& operator >>= (const T2&)): Make shift operators
+	perform a twos complement arithmetic shift for both signed and
+	unsigned integers regardless of compiler implementations.
+
 2007-06-13  Michael Goffioul  <michael.goffioul@swing.be>
 
 	* SparseCmplxQR.cc (OCTAVE_C99_ZERO): For CXSparse 2.2 and greater
